<resources>
    <string name="app_name">Shop Now</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_profile">Profile</string>
    <string name="str_logout">Logout</string>
    <string name="str_settings">Settings</string>
    <string name="str_help_and_feedback">Help and feedback</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_browse">Browse</string>
    <string name="str_upload">Upload</string>
    <string name="str_re_password">Re-enter password</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_submit">Submit</string>
    <string name="str_name">Name</string>
    <string name="str_phone_no">Phone number</string>
    <string name="str_registration">Registration</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="str_click_here">click here</string>
    <string name="str_order">Order</string>
    <string name="order">Order</string>

</resources>