<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/login_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="20dp"
android:gravity="center">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:src="@mipmap/signin_logo_foreground" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_back"
    android:textSize="25sp"
    android:layout_marginBottom="20dp"
    android:textColor="@color/black"
    android:fontFamily="monospace"/>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/email_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_marginVertical="8dp"
    android:hint="@string/str_email"
    app:startIconTint="@color/yellow"
    app:startIconDrawable="@drawable/ic_baseline_email_24">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signin_txt_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/pwd_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_marginVertical="8dp"
    android:hint="@string/str_password"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/yellow"
    app:startIconDrawable="@drawable/ic_baseline_keyboard_hide_24"
    app:startIconTint="@color/yellow">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signin_txt_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"/>
</com.google.android.material.textfield.TextInputLayout>


<Button
    android:id="@+id/btn_signin"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/str_sign_in"
    android:layout_marginVertical="30dp"
    android:background="@drawable/shape_btn"/>

</LinearLayout>